# CMPT_214

./: A1Q2.c  A1Q3.c  A1Q4.c  A1Q5.c  A1Q6.c  CMakeLists.txt  Quizes.c  cases.txt
A1/: A1Q1.c  A1Q3.c  A1Q5.c  A1Q6.c  food.txt
A2/: A2Q1.c  A2Q5.c
